# hagane

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  devshell.nix  pyproject.toml
docs/source/: conf.py  index.rst
examples/: accumulate.py  basic_simulation.py  gas_station.py
src/hagane/: __init__.py  api.py  api_continuous.py  api_coroutines.py  api_discrete.py  api_functional.py  api_generators.py  api_iterators.py  compute.py  event.py  results.py  simulation.py  state.py
tests/unit/: test_compute.py  test_state.py
