[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hagane"
authors = [{name = "Carlos Les"}]
readme = "README.md"
keywords = ["functional", "discrete", "event", "simulation"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "more-itertools",
    "sortedcontainers",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = ["sphinx"]
test = ["pytest", "pytest-cov"]
dev = [
    "pre-commit",
    "isort",
    "black",
    "pyproject-flake8",
    "mypy",
    "hagane[doc,test]",
]

[project.urls]
source = "https://github.com/carlosles/hagane"

[tool.setuptools.dynamic]
version = {attr = "hagane.__version__"}
description = {file = "hagane.__init__.__docstring__"}

[tool.isort]
profile = "black"
line_length = 79
filter_files = true

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'
skip-string-normalization = true

[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203",
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
max-complexity = 10
per-file-ignores = [
    "setup.py: D100",  # missing docstring
    "docs/source/conf.py: D100",
    "examples/*.py: D100",
    "tests/*.py: D205, D400",  # docstring formatting
]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = [
    '(build/)',
    '(examples/)',
    '(tests/)',
]